# Math-148-Project

./: .env  README.md  dim_reduction.py  llm_extract_features.py  load_data.py  main.ipynb  processing.py  revised_eda_notebook.ipynb  text_processing.py  usefulness.py  zipcode.py
food-classification/: .gitignore  README.md  pyproject.toml
food-classification/data_utils/: dataset.py  utils.py
food-classification/model/: fusion_model.py  gradcam.py  resnet18.py  utils.py
food-classification/notebooks/explanability/: multimodal_explanability.ipynb  price_binary_model_explanability.ipynb  visualization.ipynb
food-classification/notebooks/food101/: food101_classification.ipynb  food101_pretrained_application.ipynb  train_food101_classification.ipynb
food-classification/notebooks/label/: label_classification.ipynb  train_label_classification.ipynb
food-classification/notebooks/price/: price_multiclass_multimodal.ipynb  train_binary.ipynb  train_binary_multimodal.ipynb  train_multiclass.ipynb  train_price_multiclass_multimodal.ipynb
rec-engine/: .gitignore  README.md  pyproject.toml
rec-engine/clip-server/: main.py  pyproject.toml  test_clip_cuda.py  train.py
rec-engine/docker/: docker-compose.yaml
rec-engine/rec_engine/: data_types.py
rec-engine/rec_engine/app/: inspect_index.py  load_data.py  main.py  reset_elastic.py
rec-engine/rec_engine/core/: __init__.py  agent.py
rec-engine/rec_engine/database/: engine.py  yelp_index.py
rec-engine/tests/: evaluation.py
text-classification/: main.ipynb  requirements.txt
text-classification/utils/: deep_learning.py  evaluation.py  loading.py  modeling.py  plotting.py  preprocessing.py
unorganized/: col_correl.py  revised_eda_notebook.ipynb
utils/: data_utils.py  dim_reduction.py  ensemble.py  imputation_utils.py  load_data.py  loading.py  modeling_utils.py  plotting_utils.py  processing.py  text_transformer_utils.py  zipcode.py
