[tool.poetry]
name = "rec-engine"
version = "0.1.0"
description = ""
authors = ["Zhijin Fang <daniel.zhijin.fang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
elasticsearch = "^8.17.1"
openai = "^1.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
