[tool.poetry]
name = "rec-engine"
version = "0.1.0"
description = ""
authors = ["Zhijin Fang <daniel.zhijin.fang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
elasticsearch = "^8.17.1"
openai = "^1.61.0"
requests = "^2.32.3"
tabulate = "^0.9.0"
aiohttp = "^3.11.13"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
