[tool.poetry]
name = "clip-service"
version = "0.1.0"
description = ""
authors = ["Zhijin Fang <daniel.zhijin.fang@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
clip = {git = "https://github.com/openai/CLIP.git"}
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
open-clip-torch = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
